# litecrew-langchain

./: .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHROMADB_FEATURES_LOSS.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DETAILED.md  IMPLEMENTATION_PLAN_EXTENDED.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  blok_1_1_summary.md  blok_1_2_summary.md  crewai_analysis_report.md  docker-compose.yml  framework_comparison_table.md  gitleaks-baseline.json  litecrew_minimal_requirements.txt  litecrewai-master-plan.md  project-context.md  pyproject.toml  raport-audytu-faz-0-1.md  requirements.txt  setup_droplet.sh  telemetry_removal_report_20250629_124459.txt  test_litecrew.py  test_litecrew_simple.py
app/: __init__.py  (+1 more)
litecrew-langchain/: .dockerignore  .env.example  .env.production  .env.security.example  .env.test  .gitignore  .gitlab-ci-fix.yml  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_STATUS.md  Dockerfile  FEATURES.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  PHASE_8_VALIDATION_REPORT.md  PHASE_9_VALIDATION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SECURITY.md  STATUS.md  bandit-report.json  coverage.json  debug_storage.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  fix-cloudflare-521.sh  fix_opus4_support.py  fix_tests.py  gitlab-ci-variables.md  panel_output_20250706_233800.md  panel_simple_output.txt  postman_collection.json  project-context.md  pyproject.toml  (+11 more)
litecrew-langchain/.devcontainer/: devcontainer.json
litecrew-langchain/benchmarks/: check_metrics.py  delegation_performance.py  performance_test.py  phase5_metrics_results.json  phase5_validation_report.md  test_agent_performance.py  test_agent_types_performance.py  test_crew_performance.py  test_direct_import.py  test_import_breakdown.py  test_import_time.py  test_process_performance.py  test_task_performance.py  validate_phase6_block1.py  validate_phase6_block2.py  validate_phase6_block3.py  validate_phase6_complete.py  verify_phase3_metrics.py  verify_phase4_block1_metrics.py  verify_phase4_block2_metrics.py  verify_phase4_block3_metrics.py  verify_phase5_metrics.py
litecrew-langchain/deploy/: caddy-setup.sh  setup-cloudflare-origin-cert.sh  setup-https-caddy.sh  setup-llm-keys.sh  update-with-anthropic.sh
litecrew-langchain/docs/: AGENT_TYPES.md  API_REFERENCE.md  CONTAINER_TESTING_REPORT.md  CREWAI_FEATURES_COMPARISON.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SETUP.md  DOCUMENTATION_SYNC_SUMMARY.md  HTTPS_SETUP.md  IMPLEMENTATION_ROADMAP.md  MIGRATION_PYDANTIC_TO_DATACLASSES.md  NEWMAN_CLI_TESTING.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_ISSUES_RESOLUTION.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_4_VALIDATION_REPORT.md  PHASE_7_SUMMARY.md  PHASE_7_VALIDATION_REPORT.md  POSTMAN_SETUP.md  PROJECT_WORKFLOW.md  ROADMAP_MULTIAGENT_PROCESSES.md  SECURITY.md  SECURITY_SETUP.md  USER_FRIENDLY_PROCESSES.md  VIBE_CODING_GUIDE.md  llm_providers_config.md
litecrew-langchain/docs/benchmark-results/: CAROUSEL_SLIDES.md  LINKEDIN_INSIGHTS.md
litecrew-langchain/examples/: advanced_memory_demo.py  advanced_orchestration_demo.py  api_example.sh  crew_explained.py  custom_roles_example.py  memory_demo.py  multi_llm_demo.py  postman_collection.json  production_features_demo.py  python_example.py  streaming_async_demo.py
litecrew-langchain/nginx/: nginx.conf
litecrew-langchain/research/: RECOMMENDATION.md  api_compatibility_analysis.py  benchmark_models.py  direct_compatibility_analysis.md  migration_example.py  pydantic_alternatives.md
litecrew-langchain/scripts/: check-droplet.sh  deploy.sh  test-api.sh
litecrew-langchain/src/litecrew/: __init__.py  agent.py  api.py  base.py  config.py  crew.py  events.py  outputs.py  rate_limiter.py  task.py  tools.py  types.py
litecrew-langchain/src/litecrew/agent_types/: __init__.py  base.py  behaviors.py  factory.py  types.py
litecrew-langchain/src/litecrew/api/: __init__.py  __init__.py.secure  agent_selector.py  default_configs.py  models.py  process_callbacks.py  share_links.py  storage.py  template_analytics.py  template_storage.py  templates.py  visualization.py  websocket.py
litecrew-langchain/src/litecrew/cache/: __init__.py  invalidator.py  metrics.py  multilevel.py  policy.py  warmer.py
litecrew-langchain/src/litecrew/cli/: __init__.py  main.py
litecrew-langchain/src/litecrew/context/: __init__.py  context_config.py  context_limiter.py  context_merger.py  context_persistence.py  shared_context.py
litecrew-langchain/src/litecrew/debugging/: __init__.py  debugger.py
litecrew-langchain/tests/: TEST_SUMMARY.md  __init__.py  conftest.py  test_agent_behaviors_coverage.py  test_agent_comprehensive.py  test_agent_simple.py  test_agent_type_factory.py  test_agent_types_base.py  test_agent_types_base_simple.py  test_api.py  test_api_agent_selector.py  test_api_auth_google.py  test_api_comprehensive.py  test_api_default_configs.py  test_api_module.py  test_api_security.py  test_api_share_links.py  test_api_template_analytics.py  test_api_template_storage.py  test_api_templates.py  test_api_templates_coverage.py  test_api_visualization.py  test_api_websocket.py  test_basic.py  test_cache_comprehensive.py  test_cache_policy_coverage.py  test_caching_strategy.py  test_cli.py  test_cli_commands_task.py  test_cli_coverage.py  test_cli_export.py  test_compression_coverage.py  test_config.py  test_conversational_process.py  test_coverage_boost_simple.py  test_coverage_targeted.py  test_crew_coverage.py  test_crew_execution.py  test_dashboard.py  test_debate_process.py  (+52 more)
litecrew-langchain/tests/postman/: environment.json  litecrew-api-tests.json
litecrew-langchain/tests/unit/: test_agent.py  test_agent_types.py  test_context.py  test_conversation_memory.py  test_crew.py  test_delegation.py  test_multi_llm.py  test_package_metrics.py  test_pydantic_compatibility.py  test_streaming_async.py  test_task.py
(+299 files in other folders)
