[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litecrew-langchain"
version = "0.6.0"
description = "Lightweight multi-agent orchestration framework - 363x faster than CrewAI"
authors = [{name = "LiteCrew Team", email = "team@litecrew.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "langchain", "crewai", "orchestration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.2.1",
    "langchain-openai>=0.1.8",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    # API dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.1",
    # HTTP client
    "httpx>=0.25.0",
    # Additional
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "psutil>=5.9.0",  # For benchmarking
]

[project.urls]
"Homepage" = "https://gitlab.com/eof3/litecrewai"
"Bug Tracker" = "https://gitlab.com/eof3/litecrewai/issues"
"Documentation" = "https://litecrew.ai/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "N806"]  # E501: Line too long - handled by black, N806: Variable in function should be lowercase

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"